Centered QR code component in body and  adjusted colors, text styles, spacing according to figma file

--- a/style.css
+++ b/style.css
@@ -16,17 +16,20 @@ html {
 }
 
 body {
-  background-color: #d6e2f0;
-  color: #212529;
+  background-color: #d5e1ef;
   font-family: "Outfit", sans-serif;
+
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .qr-code-card {
-  width: 28rem;
+  width: 32rem;
   margin: 0 auto;
   background-color: #ffffff;
-  padding: 1.2rem;
-  margin-top: 16rem;
+  padding: 1.6rem;
 
   border-radius: 20px;
 
@@ -41,25 +44,29 @@ body {
 .card-img {
   width: 100%;
   border-radius: 10px;
-  margin-bottom: 2rem;
+  margin-bottom: 2.4rem;
 }
 
 .card-content {
   text-align: center;
-  padding: 0.4rem;
+  margin-bottom: 2.4rem;
 }
 
 .card-content-heading {
-  font-size: 2rem;
-  font-weight: 700;
+  font-size: 2.2rem;
+  font-weight: bold;
+  line-height: 120%;
+  letter-spacing: 0px;
+  color: #1f314f;
+
   margin-bottom: 1.6rem;
   display: inline-block;
 }
 
 .card-content-text {
   font-size: 1.5rem;
-  font-weight: 400;
-  color: #868e96;
+  line-height: 140%;
+  letter-spacing: 0.2px;
+  color: #68778d;
   display: inline-block;
-  margin-bottom: 2.4rem;
 }
