--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
   blur (softness of shadow), 
   spread (size of shadow),
   color */
-  box-shadow: 0 10px 15px 0px #a5b0c277;
+  box-shadow: 0 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .card-img {
